# Kubo-Agent

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  PLAN.md  README.md  main.py  pyproject.toml
backend/sql/: migrations.sql  seed_data.sql
backend/src/: __init__.py  cli.py  db.py  models.py  schemas.py  security.py  settings.py
backend/src/ai/: README.md  __init__.py  client.py  executor.py  models.py  prompts.py  service.py  tools.py
backend/src/kubo_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/routers/: __init__.py  ai_router.py  auth.py  kubo_router.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/_components/: AuthCard.tsx  ChatPanel.tsx  Header.tsx  PodsGrid.tsx  PodsGridSimple.tsx
frontend/app/auth/: page.tsx
frontend/app/bookings/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: AuthCard.tsx  BackgroundOrbs.tsx  ChatPanel.tsx  Header.tsx  PodsGrid.tsx
frontend/app/hooks/: useApi.ts  useAuth.ts  useChat.ts  usePods.ts
frontend/app/store/: useAppStore.ts
