[project]
name = "kubo-backend"
version = "0.1.0"
description = "FastAPI backend for booking and availability system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.114",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "psycopg2-binary>=2.9",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "email-validator>=2.2",
  "python-dotenv>=1.0",
]

[project.scripts]
kubo-serve = "src.server:run"

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"


